                                                     -*- coding: utf-8 -*-
Changes for APR 1.5.1

  *) FreeBSD 10: Correct a regression in 1.5.0 which affected non-
     blocking sockets in some applications, including httpd.  [Jeff
     Trawick]

  *) Windows cmake build: Fix incorrect installation of some .pdb
     files.  [Jeff Trawick]

  *) apr_skiplist: Add compatibility with C++ applications.
     [Jeff Trawick]

  *) When using shmget-based shared memory, the ID used for ftok is
     now an APR hash of the filename instead of the constant '1'.
     PR 53996 [Jim Jagielski]

  *) Correct a regression in 1.5.0 which affected out-of-tree
     builds on Unix.  [Rainer Jung]

Changes for APR 1.5.0

  *) Fix Linux kernel version check to recognize more versions,
     including versions 3.10 and later.  PR 55690.  [Joe Orton,
     Arfrever Frehtes Taifersar Arahesis <arfrever.fta gmail.com>]

  *) Add apr_sockaddr_is_wildcard() to check if a socket address
     refers to the wildcard address for the protocol family (e.g.,
     0.0.0.0/INADDR_ANY for IPv4).  [Jeff Trawick]

  *) apr_file_dup2() on Windows: Fix debug RTL assertion when 
     attempting to _commit(stdout) or _commit(stderr).  [Mike Rumph
     <mike.rumph oracle.com>]

  *) apr_socket_connect() on Windows: Handle WSAEISCONN.  PR 48736.
     [<inoue ariel-networks.com>, Jeff Trawick]

  *) z/OS: threadsafe apr_pollset_poll support for sockets [Greg Ames]

  *) Windows:  Don't obtain a mutex for buffered file I/O unless the
     file was opened with the APR_FOPEN_XTHREAD flag.  [Ivan Zhakov
     <ivan visualsvn.com>]

  *) Windows:  Create named shared memory segments under the "Local"
     namespace if the caller is unprivileged, fixing an inability of
     unprivileged callers to use apr_shm_create() with named shared
     memory segments under recent Windows.  As before, shared memory
     segments are created under the "Global" namespace for privileged